login page designed

--- a/Istn3ASproject/Istn3ASproject.csproj
+++ b/Istn3ASproject/Istn3ASproject.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Reports.resx">
       <DependentUpon>Reports.cs</DependentUpon>
@@ -131,6 +132,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\waterimg.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\betterwaterimg.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loginbg.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\eye.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
